--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -22,10 +22,10 @@ pipeline {
                 }
             }
         }
-        stage('Deliver') {
+        /*stage('Deliver') {
             steps {
                 bat './jenkins/scripts/deliver.sh'
             }
-        }
+        }*/
     }
 }
