--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
             post {
                 always {
                     junit 'target/surefire-reports/*.xml'
-                    emailext body: 'hi', recipientProviders: [developers(), requestor()], subject: 'mail', to: 'sudhakar.pro00@gmail.com' 
+                    emailext body: 'hi', subject: 'mail', to: 'sudhakar.pro00@gmail.com' 
                     // emailext attachLog: true, body: '${env.BUILD_URL}',recipientProviders: [developers()], subject: 'jenkins', to: 'sudhakar.pro00@gmail.com'
                     
                 }
