--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,6 +16,21 @@ pipeline {
             steps {
                 bat 'mvn test'
             }
+        }
+        
+        stage('sonarqube analysis'){
+            steps{
+                withSonarQubeEnv("sonarserver")
+    {
+        
+        
+          //TODO this should run in a container
+            bat "mvn sonar:sonar"
+        //-Dsonar.analysis.mode=publish -Dsonar.projectDate= -Dsonar.sourceEncoding=UTF-8 -Dsonar.verbose=true -Dsonar.projectName= -Dsonar.projectVersion=${sonarQubeRelease} -Dsonar.projectKey=${key}"
+            //Execute this command if the compile type is maven
+        
+    }
+            }
             post {
                 always {
                     junit 'target/surefire-reports/*.xml'
