--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,18 +19,19 @@ pipeline {
         }
         
         stage('sonarqube analysis'){
-            /*steps{
+            steps{
                 withSonarQubeEnv("sonarserver")
     {
         
         
           //TODO this should run in a container
-            bat "mvn sonar:sonar"
+            //bat "mvn sonar:sonar"
+        bat "echo hi"
         //-Dsonar.analysis.mode=publish -Dsonar.projectDate= -Dsonar.sourceEncoding=UTF-8 -Dsonar.verbose=true -Dsonar.projectName= -Dsonar.projectVersion=${sonarQubeRelease} -Dsonar.projectKey=${key}"
             //Execute this command if the compile type is maven
         
     }
-            }*/
+            }
             post {
                 always {
                     junit 'target/surefire-reports/*.xml'
