--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -41,10 +41,27 @@ pipeline {
                 }
             }
         }
-        /*stage('Deliver') {
+        stage('Deliver') {
             steps {
-                bat './jenkins/scripts/deliver.sh'
+               rtUpload (
+    serverId: 'jfrogartifactory',
+    spec: '''{
+          "files": [
+            {
+              "pattern": "target/*.war",
+              "target": "libs-snapshot/wars"
             }
-        }*/
+         ]
+    }''',
+ 
+    // Optional - Associate the uploaded files with the following custom build name and build number,
+    // as build artifacts.
+    // If not set, the files will be associated with the default build name and build number (i.e the
+    // the Jenkins job name and number).
+    buildName: 'holyFrog',
+    buildNumber: '1'
+)
+            }
+        }
     }
 }
