--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
             post {
                 always {
                     junit 'target/surefire-reports/*.xml'
-                    emailext attachmentsPattern: 'target/surefire-reports/*.xml', body: 'hi', subject: 'mail', to: 'sudhakar.pro00@gmail.com' 
+                    //emailext attachmentsPattern: 'target/surefire-reports/*.xml', body: 'hi', subject: 'mail', to: 'sudhakar.pro00@gmail.com' 
                     // emailext attachLog: true, body: '${env.BUILD_URL}',recipientProviders: [developers()], subject: 'jenkins', to: 'sudhakar.pro00@gmail.com'
                     
                 }
