--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
           "files": [
             {
               "pattern": "target/mvn-hello-world.war",
-              "target": "libs-snapshot-local/wars/"
+              "target": "libs-snapshot-local/"
             }
          ]
     }''',
