--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -63,5 +63,15 @@ pipeline {
 )
             }
         }
+        
+        stage("trigger deployment")
+        {
+            
+            steps{
+                
+                build 'testpipeline'
+              
+            }
+        }
     }
 }
