--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
             }
         }
         
-        stage('sonarqube analysis'){
+        /*stage('sonarqube analysis'){
             steps{
                 withSonarQubeEnv("sonarserver")
     {
@@ -62,7 +62,7 @@ pipeline {
     buildNumber: "${env.BUILD_NUMBER}"
 )
             }
-        }
+        }*/
         
        /* stage("trigger deployment")
         {
