--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,9 +1,9 @@
 pipeline {
     agent any
-    tools { 
+   /* tools { 
         maven 'Maven3' 
         
-    }
+    }*/
     stages {
         stage('Build') {
             steps {
