--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,13 +8,13 @@ pipeline {
         stage('Build') {
             steps {
                 
-                bat 'mvn -B -DskipTests clean package'
+                sh 'mvn -B -DskipTests clean package'
                 
             }
         }
         stage('Test') {
             steps {
-                bat 'mvn test'
+                sh 'mvn test'
             }
         }
         
